//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos;

import "google/protobuf/any.proto";

import "echo.proto";
import "testing.proto";

//
// Typescript Note:
// Use the interface name in code (e.g., IFeedEvenlope) and the concrete class name in the __type_url reference.
//

//
// Outer message type decoded by Codec.
//
message FeedMessage {
  CredentialsMessage halo = 1;
  dxos.echo.EchoEnvelope echo = 2;
}

// 
// A container for dxos.credentials.Message
//
// TODO(marik-d): Figure out how to import a protobuf type from @dxos/credentials package.
//
message CredentialsMessage {
  bytes data = 1;
}

//
// TODO(burdon): Alternative to google/protobuf/any.proto
// Compact form to represent system registrations (replacement to extensions).
// https://developers.google.com/protocol-buffers/docs/proto3#any
//
message Any {
  int32 type_code = 1;
  string type_url = 2;
  bytes value = 3;
}
